--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 body{
-    background: url('background.jpg');
+    background: url('background1.jpg');
     
     font-family: Squares;
     color: white;
