--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Squares;
-    src: url('fonts/Squares Bold Free.otf');
+    src: url('../fonts/Squares Bold Free.otf');
 }
 
 *{
@@ -17,7 +17,7 @@
 }
 
 body{
-    background: url('background1.jpg');
+    background: url('../images/background1.jpg');
     
     font-family: Squares;
     color: white;
