--- a/scripts/templates/cell.tmpl.html
+++ b/scripts/templates/cell.tmpl.html
@@ -1,3 +1,3 @@
-<td class="sudoku-cell" data-bind="css: { 'sudoku-cell-blocked' : cell.hasNumber }">
-    <input type="text" maxlength="1" data-bind="value: cell.number, disable: cell.hasNumber" />
+<td class="sudoku-cell" data-bind="cellBinding: cell">
+    <input type="text" maxlength="1" />
 </td>
