--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,7 @@ body {
     font-family: Squares;
     background: rgb(250, 248, 239);
 }
+
 /********/
 /* MENU */
 /********/
@@ -67,6 +68,7 @@ body {
     position: fixed;
     z-index: 500;
     width: 100%;
+    height: 75px;
     background: rgb(250, 248, 239);
     color: rgb(15, 25, 40);
     box-shadow: inset 0px -2px 1px 0px rgba(0, 0, 0, 0.33);
@@ -89,6 +91,27 @@ body {
     color: rgb(15, 25, 40);
 }
 
+.menu-bullets-container {
+    margin: 25px 20px;
+    float: left;
+}
+
+.menu-bullet {
+    display: inline-block;
+    
+    width: 24px;
+    height: 24px;
+    margin: 0 20px;
+    
+    background: rgb(15, 25, 40);
+    box-shadow: 0px 0px 3px 0px rgba(15, 25, 40, 0.5);
+    border-radius: 50%;
+}
+
+.menu-bullet.active {
+    transform: scale(1.3);
+    transition: all 0.5s;
+}
 
 .menu-pull {
     width: 32px;
@@ -136,7 +159,7 @@ body {
 }
 
 .menu-hidden li {
-    height: 20%;
+    height: 15%;
     line-height: 100px;
 }
 
@@ -298,6 +321,10 @@ section {
     color: rgb(15, 25, 40);
     
     box-shadow: 0px 0px 10px 0px rgba(15, 25, 40,0.5);
+}
+
+section p {
+    text-indent: 20px;
 }
 
 section h1 {
@@ -468,6 +495,12 @@ section h1 {
     section {
         width: 90%;
         padding: 1% 5% 5% 5%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .menu-bullets-container {
+        display: none;
     }
 }
 /************/
