--- a/scripts/templates/loader.tmpl.html
+++ b/scripts/templates/loader.tmpl.html
@@ -18,6 +18,6 @@
     </table>
     <div id="loader-extra">
         <p data-bind="text: content"></p>
-        <button data-bind="click: retry" class="bg-blue">Close</button>
+        <button data-bind="click: retry" class="bg-blue">I'm stucked!</button>
     </div>
 </div>
