--- a/scripts/templates/game.tmpl.html
+++ b/scripts/templates/game.tmpl.html
@@ -6,11 +6,14 @@
     <span id="sudoku-clock" data-bind="text: TimerViewModel.time"></span>
     <span id="sudoku-pause" data-bind="click: pause"></span>
 </h2>
-<table id="sudoku-board" data-bind="template: { name: 'board', data: BoardViewModel }">
+<table id="sudoku-normal-board" data-bind="template: { name: 'board', data: BoardViewModel }">
 </table>
 <div class="button-container">
     <button data-bind="click: function () { generate('Easy') ; }" class="bg-white">Easy</button>
     <button data-bind="click: function () { generate('Medium') ; }" class="bg-yellow">Medium</button>
     <button data-bind="click: function () { generate('Hard') ; }" class="bg-red">Hard</button>
-    <button data-bind="click: solve" class="bg-green">Solve</button>
+</div>
+<div class="button-container">
+    <button class="bg-blue" data-bind="click: solve">Solve</button>
+    <button class="bg-green" data-bind="click: finish">Finished</button>
 </div>
